--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-        ga('create', 'UA-40383819-1', 'github.com');
+        ga('create', 'UA-40383819-1', 'github.io');
         ga('send', 'pageview');
     </script>
     <style>
