More informations abour roadmap

--- a/index.html
+++ b/index.html
@@ -112,6 +112,18 @@
             You can take a look at the <a href="https://github.com/gdrouet/wuic/issues/milestones">milestones</a> for additional information.
         </p>
 
+        <p>
+            We aim to consider WUIC as a real framework when very structural features will be implemented :
+            <ul>
+                <li>Chain engines and create custom engines as much as you want</li>
+                <li>Reload automatically configuration and resources at runtime</li>
+                <li>Pick resources from everywhere (disk, classpath, webapp, HTTP, FTP)</li>
+                <li>Various cache engine (ehcache, client side, taking application version in consideration, etc)</li>
+                <li>Engine output goes everywhere (media server, HTTP response, etc)</li>
+                <li>Annotation driven configuration with spring</li>
+            </ul>
+        </p>
+
         <h3>
             Quick start
         </h3>
