Note regarding backward compatibility

--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
                 <li>Image sprites are provided in javascript constants, CSS class not yet implemented</li>
                 <li>We aggregate images thanks to the lightmaps bin packing algorithm implemented in the library</li>
             </ul>
+
+            We also assume that you won't expect backward compatibility until we release the v1.0.0 of the project.
         </p>
 
         <p>
