--- a/index.html
+++ b/index.html
@@ -148,8 +148,13 @@
     <script src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript">
-        var m = $("#more");
-        m.collapse({toggle:true});
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-40383819-1', 'github.io');
+        ga('send', 'pageview');
+        $("#more").collapse({toggle:true});
         $("#quick-link").html('<h4>Quick links</h4>'
         + '<ul>'
         + '<li style="line-height: 20px;">Find maven dependencies available <a href="http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22com.github.wuic%22" target="_blank">here</a></li>'
