--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                         <div class="span7">
                             <h4>Welcome to WUIC</h4>
                             <p>
-                                Written in Java, the project focuses on <strong>best practices automation around statics</strong>. Its aims to
-                                guarantee <strong>high performance</strong> when your pages are loaded by the client on the web,
-                                keeping <strong>high productivity during your developments</strong>.
+                                Written in Java, the project focuses on <strong>best practices automation around statics</strong>.
+                                WUIC aims to guarantee <strong>high performance</strong> when your pages are loaded by the client
+                                on the web, keeping <strong>high productivity during your developments</strong>.
                             </p>
 
                             <br/>
