--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                         <li><a href="http://wuic-team.19876.n7.nabble.com/" target="_blank">Forum</a></li>
                         <li class="active"><a href="contact.html">Contact</a></li>
                         <li><a href="https://github.com/gdrouet/wuic" target="_blank" title="Wuic Github"><img src="wiki-images/social/blacktocat.png" alt="Github" width="30%" height="30%"/></a></li>
-                        <!--li><a href="#"><img src="wiki-images/social/twitter.png" alt="Twitter"/></a></li-->
+                        <li><a href="https://twitter.com/wuic_project" target="_blank"><img src="wiki-images/social/twitter.png" alt="Twitter" width="30%" height="30%" /></a></li>
                     </ul>
                 </div>
             </div>
