Adds menu icons

--- a/documentation.html
+++ b/documentation.html
@@ -33,12 +33,12 @@
                 <div class="container">
                     <ul class="nav" role="navigation">
                         <!-- Logo and slogan -->
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="project.html">Project</a></li>
-                        <li><a href="download.html">Downloads</a></li>
-                        <li class="active"><a href="documentation.html">Documentation</a></li>
-                        <li><a href="http://wuic-team.19876.n7.nabble.com/" target="_blank">Forum</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li class="active"><a href="index.html"><i class="icon-home"></i>Home</a></li>
+                        <li><a href="project.html"><i class="icon-star"></i>Project</a></li>
+                        <li><a href="download.html"><i class="icon-download"></i>Downloads</a></li>
+                        <li><a href="documentation.html"><i class="icon-book"></i>Documentation</a></li>
+                        <li><a href="http://wuic-team.19876.n7.nabble.com/" target="_blank"><i class="icon-user"></i>Forum</a></li>
+                        <li><a href="contact.html"><i class="icon-envelope"></i>Contact</a></li>
                         <li><a href="https://github.com/gdrouet/wuic" target="_blank" title="Wuic Github"><img src="wiki-images/social/blacktocat.png" alt="Github" width="30%" height="30%"/></a></li>
                         <li><a href="https://twitter.com/wuic_project" target="_blank"><img src="wiki-images/social/twitter.png" alt="Twitter" width="30%" height="30%" /></a></li>
                     </ul>
