--- a/documentation.html
+++ b/documentation.html
@@ -9,9 +9,10 @@
     <meta name="author" content="Corentin AZELART, Guillaume DROUET">
 
     <!-- styles -->
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="wiki-css/theme.css" rel="stylesheet">
-    <link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="wiki-css/theme.css" rel="stylesheet" />
+    <link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" />
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" />
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -39,8 +40,8 @@
                         <li class="active"><a href="documentation.html"><i class="icon-book"></i><span class="hidden-phone">Documentation</span></a></li>
                         <li><a href="http://wuic-team.19876.n7.nabble.com/" target="_blank"><i class="icon-user"></i><span class="hidden-phone">Forum</span></a></li>
                         <li><a href="contact.html"><i class="icon-envelope"></i><span class="hidden-phone">Contact</span></a></li>
-                        <li><a href="https://github.com/gdrouet/wuic" target="_blank" title="Wuic Github"><img src="wiki-images/social/blacktocat.png" alt="Github" width="30%" height="30%"/></a></li>
-                        <li><a href="https://twitter.com/wuic_project" target="_blank"><img src="wiki-images/social/twitter.png" alt="Twitter" width="30%" height="30%" /></a></li>
+                        <li><a href="https://github.com/gdrouet/wuic" target="_blank" title="Wuic Github"><i class="icon-github"></i><span class="hidden-phone">Github</span></a></li>
+                        <li><a href="https://twitter.com/wuic_project" target="_blank"><i class="icon-twitter"></i><span class="hidden-phone">Twitter</span></a></li>
                     </ul>
                 </div>
             </div>
