Enhance responsive design and minor content updates

--- a/documentation.html
+++ b/documentation.html
@@ -34,14 +34,12 @@
                 <div class="container">
                     <ul class="nav" role="navigation">
                         <!-- Logo and slogan -->
-                        <li><a href="index.html"><i class="icon-home"></i><span class="hidden-phone">Home</span></a></li>
-                        <li><a href="project.html"><i class="icon-star"></i><span class="hidden-phone">Project</span></a></li>
-                        <li><a href="download.html"><i class="icon-download"></i><span class="hidden-phone">Downloads</span></a></li>
-                        <li class="active"><a href="documentation.html"><i class="icon-book"></i><span class="hidden-phone">Documentation</span></a></li>
-                        <li><a href="http://wuic-team.19876.n7.nabble.com/" target="_blank"><i class="icon-user"></i><span class="hidden-phone">Forum</span></a></li>
-                        <li><a href="contact.html"><i class="icon-envelope"></i><span class="hidden-phone">Contact</span></a></li>
-                        <li><a href="https://github.com/gdrouet/wuic" target="_blank" title="Wuic Github"><i class="icon-github"></i><span class="hidden-phone">Github</span></a></li>
-                        <li><a href="https://twitter.com/wuic_project" target="_blank"><i class="icon-twitter"></i><span class="hidden-phone">Twitter</span></a></li>
+                        <li><a href="index.html"><i class="icon-home"></i><span class="hidden-phone">&nbsp;Home</span></a></li>
+                        <li><a href="project.html"><i class="icon-star"></i><span class="hidden-phone">&nbsp;Project</span></a></li>
+                        <li class="active"><a href="documentation.html"><i class="icon-book"></i><span class="hidden-phone">&nbsp;Documentation</span></a></li>
+                        <li><a href="contact.html"><i class="icon-envelope"></i><span class="hidden-phone">&nbsp;Contact</span></a></li>
+                        <li><a href="https://github.com/gdrouet/wuic" target="_blank" title="Wuic Github"><i class="icon-github"></i><span class="hidden-phone">&nbsp;Github</span></a></li>
+                        <li><a href="https://twitter.com/wuic_project" target="_blank"><i class="icon-twitter"></i><span class="hidden-phone">&nbsp;Twitter</span></a></li>
                     </ul>
                 </div>
             </div>
@@ -61,6 +59,18 @@
     <h3>Samples</h3>
     <p>
         WUIC comes with different <a href="https://github.com/gdrouet/wuic/tree/master/samples" target="_blank">samples</a>. Reading them is a good way to discover the advantages and the simplicity of WUIC.
+    </p>
+
+    <h3>JARs</h3>
+    <p>
+        All the JARs are managed with maven and could be downloaded manually from the <a href="http://search.maven.org/#search|ga|1|g%3A%22com.github.wuic%22" target="_blank">central repository</a>.
+    </p>
+
+    <h3>Source code</h3>
+    <p>
+        Source code is hosted on <a href="https://github.com/gdrouet/wuic/" target="_blank">github</a>.
+        The source code of our official release is on the MASTER branch with a ZIP archive downloadable <a href="https://github.com/gdrouet/wuic/archive/master.zip" target="_blank">here</a>.
+        You should be also interested in the current state of our work for the next release. Download the ZIP archive of the SNAPSHOT branch <a href="https://github.com/gdrouet/wuic/archive/snapshot.zip" target="_blank">here</a>.
     </p>
 
     <hr color="#2D96B9" size="3"/>
