--- a/index.html
+++ b/index.html
@@ -34,14 +34,12 @@
                 <div class="container">
                     <ul class="nav" role="navigation">
                         <!-- Logo and slogan -->
-                        <li class="active"><a href="index.html"><i class="icon-home"></i><span class="hidden-phone">Home</span></a></li>
-                        <li><a href="project.html"><i class="icon-star"></i><span class="hidden-phone">Project</span></a></li>
-                        <li><a href="download.html"><i class="icon-download"></i><span class="hidden-phone">Downloads</span></a></li>
-                        <li><a href="documentation.html"><i class="icon-book"></i><span class="hidden-phone">Documentation</span></a></li>
-                        <li><a href="http://wuic-team.19876.n7.nabble.com/" target="_blank"><i class="icon-user"></i><span class="hidden-phone">Forum</span></a></li>
-                        <li><a href="contact.html"><i class="icon-envelope"></i><span class="hidden-phone">Contact</span></a></li>
-                        <li><a href="https://github.com/gdrouet/wuic" target="_blank" title="Wuic Github"><i class="icon-github"></i><span class="hidden-phone">Github</span></a></li>
-                        <li><a href="https://twitter.com/wuic_project" target="_blank"><i class="icon-twitter"></i><span class="hidden-phone">Twitter</span></a></li>
+                        <li class="active"><a href="index.html"><i class="icon-home"></i><span class="hidden-phone">&nbsp;Home</span></a></li>
+                        <li><a href="project.html"><i class="icon-star"></i><span class="hidden-phone">&nbsp;Project</span></a></li>
+                        <li><a href="documentation.html"><i class="icon-book"></i><span class="hidden-phone">&nbsp;Documentation</span></a></li>
+                        <li><a href="contact.html"><i class="icon-envelope"></i><span class="hidden-phone">&nbsp;Contact</span></a></li>
+                        <li><a href="https://github.com/gdrouet/wuic" target="_blank" title="Wuic Github"><i class="icon-github"></i><span class="hidden-phone">&nbsp;Github</span></a></li>
+                        <li><a href="https://twitter.com/wuic_project" target="_blank"><i class="icon-twitter"></i><span class="hidden-phone">&nbsp;Twitter</span></a></li>
                     </ul>
                 </div>
             </div>
@@ -164,7 +162,7 @@
         + '<li style="line-height: 20px;">Read the <a href="https://github.com/gdrouet/wuic/wiki/FAQ" target="_blank">FAQ</a></li>'
         + '<li style="line-height: 20px;">See the <a href="https://github.com/gdrouet/wuic/tree/master/modules" target="_blank">source code</a></li>'
         + '<li style="line-height: 20px;">Check the <a href="https://github.com/gdrouet/wuic/blob/master/changelog.txt" target="_blank">changelogs</a></li>'
-        + '</ul></div>');
+        + '</ul>');
         $("#more-info").html("Directly integrated in your development cycle, WUIC processes your statics on the fly. "
         + "It's mainly able to minify your scripts (Javascript/CSS), computes your image's sprites and supports aggregation for you. "
         + "Moreover, you can tell WUIC to load your statics remotely and serve the process result to clients anywhere using various protocols.");
