Wording and v0.3.4 release.

--- a/project.html
+++ b/project.html
@@ -65,7 +65,7 @@
 
     <h3 id="release">Release</h3>
 
-    <p>Our current release is the <a href="https://github.com/gdrouet/wuic/issues?labels=0.3.3&milestone=&page=1&state=closed" target="_blank">v0.3.3</a> !</p>
+    <p>Our current release is the <a href="https://github.com/gdrouet/wuic/issues?labels=0.3.4&milestone=&page=1&state=closed" target="_blank">v0.3.4</a>!</p>
 
     <p>Prior to v0.3.0, WUIC was not on github. See the change logs of previous releases <a href="https://raw.github.com/gdrouet/wuic/master/changelog.txt" target="_blank">here</a>.</p>
     <p>You can integrate the library using this maven dependency (available on the <a href="http://search.maven.org/#search|ga|1|wuic" target="_blank">maven central repository</a>) :</p>
@@ -74,7 +74,7 @@
         &lt;dependency&gt;
             &lt;groupId&gt;com.github.wuic&lt;/groupId&gt;
             &lt;artifactId&gt;wuic-{wuic-module}&lt;/artifactId&gt;
-            &lt;version&gt;0.3.3&lt;/version&gt;
+            &lt;version&gt;0.3.4&lt;/version&gt;
         &lt;/dependency&gt;
     </pre>
 
@@ -86,6 +86,7 @@
     <h3 id="roadmap">Roadmap</h3>
     <p>
         WUIC is a young project with the ambition to implement shortly a lot of important features.
+        Currently, we are working on the v0.4.0 which will provide a large set of improvements.
     </p>
 
     <p>
@@ -98,6 +99,7 @@
             <li>Many JS/CSS processors in addition to YUICompressor : Closure, UglifyJSS, LESS, SASS, etc</li>
             <li>Improve parallelism download of CSS by aggregating some of them and substitute @import with link tag</li>
             <li>Implement the "sourcemaps" technique</li>
+            <li>Merge existing sprites sheets from used framework to load only one image</li>
         </ul>
     </p>
 
