--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
             <h3><img src="wiki-images/logo/nut.png" width="20px" height="22px">&nbsp;Features</h3>
             <ul>
                 <li>CSS & JS minification/aggregation with various processors</li>
-                <li>Various caching solutions & strategies</li>
                 <li>Image merging and sprites computation for both CSS and JS languages</li>
-                <li>Access to statics anywhere : classpath, disk, HTTP(S), FTP(S), SSH, Cloud</li>
+                <li>JSP tag/Thymeleaf dialect for better scalibility but easy to use with pure DHTML</li>                <li>Switch debug and production mode easily</li>
+                <li>Reload configuration at runtime. Possible usage: switch debug and production mode easily</li>
+                <li>Various caching solutions with invalidation mechanism on update event</li>
+                <li>Access to statics anywhere: classpath, disk, HTTP(S), FTP(S), SSH, Cloud</li>
                 <li>Processes resources referenced with @import in CSS files</li>
-                <li>JSP tag for better scalibility but easy to use with pure DHTML</li>
-                <li>Switch debug and production mode easily</li>
             </ul>
 
             <p><a class="btn btn-info" href="project.html#roadmap">More features coming soon &raquo;</a></p>
@@ -111,8 +111,8 @@
             <ul>
                 <li>Modular API to be integrated in various infrastructures and to keep scalibility</li>
                 <li>On the fly solution to automate and to be configurable as much as possible</li>
-                <li>Processes resources but also takes care about where to pick and to serve them</li>
-                <li>Fully documented and supported by many developers</li>
+                <li>Possibility to process statics at build time if necessary</li>
+                <li>Not only processes: also takes care about where to pick and to serve statics</li>
                 <li>Young has but already proved its strength in production</li>
                 <li>Very slim with minimal dependencies</li>
                 <li>Available on the maven central repository</li>
