--- a/project.html
+++ b/project.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -87,7 +86,10 @@
 
     <h3 id="release">Release</h3>
 
-    <p>Our current release is the <a href="https://github.com/gdrouet/wuic/issues?labels=0.4.0&milestone=&page=1&state=closed" target="_blank">v0.4.0</a>!</p>
+    <p>
+        Our current release is the <a href="https://github.com/gdrouet/wuic/issues?labels=0.4.2&milestone=&page=1&state=closed" target="_blank">v0.4.2</a>!
+        We are currently working on 0.4.3 release.
+    </p>
 
     <p>Prior to v0.3.0, WUIC was not on github. See the change logs of previous releases <a href="https://raw.github.com/gdrouet/wuic/master/changelog.txt" target="_blank">here</a>.</p>
     <p>You can integrate the library using this maven dependency (available on the <a href="http://search.maven.org/#search|ga|1|wuic" target="_blank">maven central repository</a>) :</p>
@@ -96,7 +98,7 @@
         &lt;dependency&gt;
             &lt;groupId&gt;com.github.wuic&lt;/groupId&gt;
             &lt;artifactId&gt;wuic-{wuic-module}&lt;/artifactId&gt;
-            &lt;version&gt;0.4.0&lt;/version&gt;
+            &lt;version&gt;0.4.2&lt;/version&gt;
         &lt;/dependency&gt;
     </pre>
 
@@ -107,8 +109,7 @@
 
     <h3 id="roadmap">Roadmap</h3>
     <p>
-        WUIC is a young project with the ambition to implement shortly a lot of important features.
-        Currently, we are working on the v0.4.0 which will provide a large set of improvements.
+        WUIC is a young project but we are active on the project to provide regularly new releases with a larger set of features and impprovements.
     </p>
 
     <p>
