--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <li>On the fly solution to automate and to be configurable as much as possible</li>
                 <li>Possibility to process statics at build time if necessary</li>
                 <li>Not only processes: also takes care about where to pick and to serve statics</li>
-                <li>Young has but already proved its strength in production</li>
+                <li>Young but has already proved its strength in production</li>
                 <li>Very slim with minimal dependencies</li>
                 <li>Available on the maven central repository</li>
                 <li>Open source project under <a href="https://github.com/gdrouet/wuic/wiki/License" target="_blank" title="WUIC License">MIT license</a></li>
