--- a/index.html
+++ b/index.html
@@ -97,9 +97,11 @@
             <ul>
                 <li>CSS & JS minification/aggregation with various processors</li>
                 <li>Image merging and sprites computation for both CSS and JS languages</li>
-                <li>JSP tag/Thymeleaf dialect for better scalibility but easy to use with pure DHTML</li>                <li>Switch debug and production mode easily</li>
+                <li>JSP tag/Thymeleaf dialect for better scalibility but easy to use with pure DHTML</li>
+                <li>Switch debug and production mode easily</li>
                 <li>Reload configuration at runtime. Possible usage: switch debug and production mode easily</li>
-                <li>Various caching solutions with invalidation mechanism on update event</li>
+                <li>Various server-side caching solutions and smart browser cache</li>
+                <li>Monitor statics to evict immediately any server/browser cache entry</li>
                 <li>Access to statics anywhere: classpath, disk, HTTP(S), FTP(S), SSH, Cloud</li>
                 <li>Processes resources referenced with @import in CSS files</li>
             </ul>
@@ -125,9 +127,13 @@
                 You should start easily by taking a look at our different samples.
                 You can see a <a href="https://github.com/gdrouet/wuic/tree/master/samples/js-sprite-sample" target="_blank">sample</a>
                 showing how WUIC aggregates images, computes sprites and minifies Javascript for you!
-
+            </p>
+            <p>
                 Just move to the sample's directory and run it with :
                 <pre>mvn jetty:run</pre>
+            </p>
+            <p>
+                You may also be interested by our <a href="https://github.com/gdrouet/wuic/wiki">wiki</a>.
             </p>
             <p><a class="btn btn-info" href="project.html#release">Official release &raquo;</a></p>
         </div>
@@ -158,7 +164,7 @@
         + '<ul>'
         + '<li style="line-height: 20px;">Find maven dependencies available <a href="http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22com.github.wuic%22" target="_blank">here</a></li>'
         + '<li style="line-height: 20px;">Quick start with the <a href="https://github.com/gdrouet/wuic/tree/master/samples" target="_blank">samples</a></li>'
-        + '<li style="line-height: 20px;">Read the getting started guide <a href="https://github.com/gdrouet/wuic/wiki/Get-started-guide" target="_blank">here</a></li>'
+        + '<li style="line-height: 20px;">Read the 5 minutes tutorials <a href="https://github.com/gdrouet/wuic/wiki/basic-js-css-processing" target="_blank">here</a></li>'
         + '<li style="line-height: 20px;">Read the <a href="https://github.com/gdrouet/wuic/wiki/FAQ" target="_blank">FAQ</a></li>'
         + '<li style="line-height: 20px;">See the <a href="https://github.com/gdrouet/wuic/tree/master/modules" target="_blank">source code</a></li>'
         + '<li style="line-height: 20px;">Check the <a href="https://github.com/gdrouet/wuic/blob/master/changelog.txt" target="_blank">changelogs</a></li>'
