--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>WUIC - Web UI Compressor</title>
+    <title>WUIC - Web UI Compressor for JavaScript and CSS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Javascript / CSS processor & sprites generator tool for JVM">
+    <meta name="description" content="Javascript / CSS Compressor & sprites generator tool for JVM">
     <meta name="author" content="Corentin AZELART, Guillaume DROUET">
 
     <!-- styles -->
