--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                 <li>Monitor statics to evict immediately any server/browser cache entry</li>
                 <li>Access to statics anywhere: classpath, disk, HTTP(S), FTP(S), SSH, Cloud</li>
                 <li>Processes resources referenced with @import in CSS files</li>
+                <li>Filter the HTML pages with a zero-config solution</li>
             </ul>
 
             <p><a class="btn btn-info" href="project.html#roadmap">More features coming soon &raquo;</a></p>
