--- a/project.html
+++ b/project.html
@@ -88,7 +88,7 @@
 
     <p>
         Our current release is the <a href="https://github.com/gdrouet/wuic/issues?labels=0.4.3&milestone=&page=1&state=closed" target="_blank">v0.4.3</a>!
-        We are currently working on 0.4.3 which will be released the 30/03.
+        We are currently working on 0.4.4 which will be released the 30/03.
     </p>
 
     <p>See the change logs <a href="https://raw.github.com/gdrouet/wuic/master/changelog.txt" target="_blank">here</a>.</p>
@@ -98,7 +98,7 @@
         &lt;dependency&gt;
             &lt;groupId&gt;com.github.wuic&lt;/groupId&gt;
             &lt;artifactId&gt;wuic-{wuic-module}&lt;/artifactId&gt;
-            &lt;version&gt;0.4.3&lt;/version&gt;
+            &lt;version&gt;0.4.4.RC1&lt;/version&gt;
         &lt;/dependency&gt;
     </pre>
 
@@ -122,7 +122,6 @@
             <li>Improve parallelism download of CSS by aggregating some of them and substitute @import with link tag</li>
             <li>Implement the "sourcemaps" technique</li>
             <li>Merge existing sprites sheets from used framework to load only one image</li>
-            <li>Filter the HTML page to provide a zero-config solution</li>
         </ul>
     </p>
 
