Use google group instead of nabble

--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -46,9 +45,9 @@
         </div><!-- /.navbar -->
     </div>
 
-    <h3>Use the forum</h3>
+    <h3>Use the mailing list</h3>
     <p>
-        If you have any suggestion, idea, feedback or issue you can directly contact us thanks to the <a href="http://wuic-team.19876.n7.nabble.com/" target="_blank">forum</a>.
+        If you have any suggestion, idea, feedback or issue you can directly contact us thanks to the <a href="https://groups.google.com/forum/#!topic/wuic/" target="_blank">mailing list</a>.
     </p>
 
     <h3>Mail the developer</h3>
