--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
 
     <h3>Use the mailing list</h3>
     <p>
-        If you have any suggestion, idea, feedback or issue you can directly contact us thanks to the <a href="https://groups.google.com/forum/#!topic/wuic/" target="_blank">mailing list</a>.
+        If you have any suggestion, idea, feedback or issue you can directly contact us thanks to the <a href="https://groups.google.com/forum/#!forum/wuic" target="_blank">mailing list</a>.
     </p>
 
     <h3>Mail the developer</h3>
