--- a/project.html
+++ b/project.html
@@ -88,7 +88,7 @@
 
     <p>
         Our current release is the <a href="https://github.com/gdrouet/wuic/issues?labels=0.4.4&milestone=&page=1&state=closed" target="_blank">v0.4.4</a>!
-        We are currently working on 0.4.5 which will be released the 15/06.
+        We are currently working on 0.4.5 which will be released the 15/06. A stable release candidate is already available (0.4.5.RC5).
     </p>
 
     <p>See the change logs <a href="https://raw.github.com/gdrouet/wuic/master/changelog.txt" target="_blank">here</a>.</p>
