Updates old github URLs.

--- a/project.html
+++ b/project.html
@@ -37,7 +37,7 @@
                         <li class="active"><a href="project.html"><i class="icon-star"></i><span class="hidden-phone">&nbsp;Project</span></a></li>
                         <li><a href="documentation.html"><i class="icon-book"></i><span class="hidden-phone">&nbsp;Documentation</span></a></li>
                         <li><a href="contact.html"><i class="icon-envelope"></i><span class="hidden-phone">&nbsp;Contact</span></a></li>
-                        <li><a href="https://github.com/gdrouet/wuic" target="_blank" title="Wuic Github"><i class="icon-github"></i><span class="hidden-phone">&nbsp;Github</span></a></li>
+                        <li><a href="https://github.com/wuic/wuic" target="_blank" title="Wuic Github"><i class="icon-github"></i><span class="hidden-phone">&nbsp;Github</span></a></li>
                         <li><a href="https://twitter.com/wuic_project" target="_blank"><i class="icon-twitter"></i><span class="hidden-phone">&nbsp;Twitter</span></a></li>
                     </ul>
                 </div>
@@ -87,10 +87,10 @@
     <h3 id="release">Release</h3>
 
     <p>
-        Our current release is the <a href="https://github.com/gdrouet/wuic/issues?labels=0.4.5&milestone=&page=1&state=closed" target="_blank">v0.4.5</a>!
+        Our current release is the <a href="https://github.com/wuic/wuic/issues?labels=0.4.5&milestone=&page=1&state=closed" target="_blank">v0.4.5</a>!
     </p>
 
-    <p>See the change logs <a href="https://raw.github.com/gdrouet/wuic/master/changelog.txt" target="_blank">here</a>.</p>
+    <p>See the change logs <a href="https://raw.github.com/wuic/wuic/master/changelog.txt" target="_blank">here</a>.</p>
     <p>You can integrate the library using this maven dependency (available on the <a href="http://search.maven.org/#search|ga|1|wuic" target="_blank">maven central repository</a>):</p>
 
     <pre>
@@ -112,7 +112,7 @@
     </p>
 
     <p>
-        We track a lot of enhancements and their milestones on <a href="https://github.com/gdrouet/wuic/issues?milestone=&page=1&state=open" target="_blank">github</a>.
+        We track a lot of enhancements and their milestones on <a href="https://github.com/wuic/wuic/issues?milestone=&page=1&state=open" target="_blank">github</a>.
         Here is a teaser of some of them:
         <ul>
             <li>Serve resources not only from servlet but also from any delegated server in charge of hosting statics</li>
