--- a/documentation.html
+++ b/documentation.html
@@ -38,7 +38,7 @@
                         <li><a href="project.html"><i class="icon-star"></i><span class="hidden-phone">&nbsp;Project</span></a></li>
                         <li class="active"><a href="documentation.html"><i class="icon-book"></i><span class="hidden-phone">&nbsp;Documentation</span></a></li>
                         <li><a href="contact.html"><i class="icon-envelope"></i><span class="hidden-phone">&nbsp;Contact</span></a></li>
-                        <li><a href="https://github.com/gdrouet/wuic" target="_blank" title="Wuic Github"><i class="icon-github"></i><span class="hidden-phone">&nbsp;Github</span></a></li>
+                        <li><a href="https://github.com/wuic/wuic" target="_blank" title="Wuic Github"><i class="icon-github"></i><span class="hidden-phone">&nbsp;Github</span></a></li>
                         <li><a href="https://twitter.com/wuic_project" target="_blank"><i class="icon-twitter"></i><span class="hidden-phone">&nbsp;Twitter</span></a></li>
                     </ul>
                 </div>
@@ -53,12 +53,12 @@
 
     <h3>Wiki</h3>
     <p>
-        Take a look at our <a href="https://github.com/gdrouet/wuic/wiki" target="_blank">wiki</a>. It refers also a lot of documentations, especially a FAQ and a starting guide.
+        Take a look at our <a href="https://github.com/wuic/wuic/wiki" target="_blank">wiki</a>. It refers also a lot of documentations, especially a FAQ and a starting guide.
     </p>
 
     <h3>Samples</h3>
     <p>
-        WUIC comes with different <a href="https://github.com/gdrouet/wuic/tree/master/samples" target="_blank">samples</a>. Reading them is a good way to discover the advantages and the simplicity of WUIC.
+        WUIC comes with different <a href="https://github.com/wuic/wuic/tree/master/samples" target="_blank">samples</a>. Reading them is a good way to discover the advantages and the simplicity of WUIC.
     </p>
 
     <h3>JARs</h3>
@@ -68,9 +68,9 @@
 
     <h3>Source code</h3>
     <p>
-        Source code is hosted on <a href="https://github.com/gdrouet/wuic/" target="_blank">github</a>.
-        The source code of our official release is on the MASTER branch with a ZIP archive downloadable <a href="https://github.com/gdrouet/wuic/archive/master.zip" target="_blank">here</a>.
-        You should be also interested in the current state of our work for the next release. Download the ZIP archive of the SNAPSHOT branch <a href="https://github.com/gdrouet/wuic/archive/snapshot.zip" target="_blank">here</a>.
+        Source code is hosted on <a href="https://github.com/wuic/wuic/" target="_blank">github</a>.
+        The source code of our official release is on the MASTER branch with a ZIP archive downloadable <a href="https://github.com/wuic/wuic/archive/master.zip" target="_blank">here</a>.
+        You should be also interested in the current state of our work for the next release. Download the ZIP archive of the SNAPSHOT branch <a href="https://github.com/wuic/wuic/archive/snapshot.zip" target="_blank">here</a>.
     </p>
 
     <hr color="#2D96B9" size="3"/>
