--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <li><a href="project.html"><i class="icon-star"></i><span class="hidden-phone">&nbsp;Project</span></a></li>
                         <li><a href="documentation.html"><i class="icon-book"></i><span class="hidden-phone">&nbsp;Documentation</span></a></li>
                         <li><a href="contact.html"><i class="icon-envelope"></i><span class="hidden-phone">&nbsp;Contact</span></a></li>
-                        <li><a href="https://github.com/gdrouet/wuic" target="_blank" title="Wuic Github"><i class="icon-github"></i><span class="hidden-phone">&nbsp;Github</span></a></li>
+                        <li><a href="https://github.com/wuic/wuic" target="_blank" title="Wuic Github"><i class="icon-github"></i><span class="hidden-phone">&nbsp;Github</span></a></li>
                         <li><a href="https://twitter.com/wuic_project" target="_blank"><i class="icon-twitter"></i><span class="hidden-phone">&nbsp;Twitter</span></a></li>
                     </ul>
                 </div>
@@ -118,14 +118,14 @@
                 <li>Young but has already proved its strength in production</li>
                 <li>Very slim with minimal dependencies</li>
                 <li>Available on the maven central repository</li>
-                <li>Open source project under <a href="https://github.com/gdrouet/wuic/wiki/License" target="_blank" title="WUIC License">MIT license</a></li>
+                <li>Open source project under <a href="https://github.com/wuic/wuic/wiki/License" target="_blank" title="WUIC License">MIT license</a></li>
             </ul>
         </div>
         <div class="span4 slideLeft">
             <h3><img src="wiki-images/logo/nut.png" width="20px" height="22px">&nbsp;Quick start</h3>
             <p>
                 You should start easily by taking a look at our different samples.
-                You can see a <a href="https://github.com/gdrouet/wuic/tree/master/samples/js-sprite-sample" target="_blank">sample</a>
+                You can see a <a href="https://github.com/wuic/wuic/tree/master/samples/js-sprite-sample" target="_blank">sample</a>
                 showing how WUIC aggregates images, computes sprites and minifies Javascript for you!
             </p>
             <p>
@@ -133,7 +133,7 @@
                 <pre>mvn jetty:run</pre>
             </p>
             <p>
-                You may also be interested by our <a href="https://github.com/gdrouet/wuic/wiki">wiki</a>.
+                You may also be interested by our <a href="https://github.com/wuic/wuic/wiki">wiki</a>.
             </p>
             <p><a class="btn btn-info" href="project.html#release">Official release &raquo;</a></p>
         </div>
@@ -163,11 +163,11 @@
         $("#quick-link").html('<h4>Quick links</h4>'
         + '<ul>'
         + '<li style="line-height: 20px;">Find maven dependencies available <a href="http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22com.github.wuic%22" target="_blank">here</a></li>'
-        + '<li style="line-height: 20px;">Quick start with the <a href="https://github.com/gdrouet/wuic/tree/master/samples" target="_blank">samples</a></li>'
-        + '<li style="line-height: 20px;">Read the 5 minutes tutorials <a href="https://github.com/gdrouet/wuic/wiki/basic-js-css-processing" target="_blank">here</a></li>'
-        + '<li style="line-height: 20px;">Read the <a href="https://github.com/gdrouet/wuic/wiki/FAQ" target="_blank">FAQ</a></li>'
-        + '<li style="line-height: 20px;">See the <a href="https://github.com/gdrouet/wuic/tree/master/modules" target="_blank">source code</a></li>'
-        + '<li style="line-height: 20px;">Check the <a href="https://github.com/gdrouet/wuic/blob/master/changelog.txt" target="_blank">changelogs</a></li>'
+        + '<li style="line-height: 20px;">Quick start with the <a href="https://github.com/wuic/wuic/tree/master/samples" target="_blank">samples</a></li>'
+        + '<li style="line-height: 20px;">Read the 5 minutes tutorials <a href="https://github.com/wuic/wuic/wiki/basic-js-css-processing" target="_blank">here</a></li>'
+        + '<li style="line-height: 20px;">Read the <a href="https://github.com/wuic/wuic/wiki/FAQ" target="_blank">FAQ</a></li>'
+        + '<li style="line-height: 20px;">See the <a href="https://github.com/wuic/wuic/tree/master/modules" target="_blank">source code</a></li>'
+        + '<li style="line-height: 20px;">Check the <a href="https://github.com/wuic/wuic/blob/master/changelog.txt" target="_blank">changelogs</a></li>'
         + '</ul>');
         $("#more-info").html("Directly integrated in your development cycle, WUIC processes your statics on the fly. "
         + "It's mainly able to minify your scripts (Javascript/CSS), computes your image's sprites and supports aggregation for you. "
