Updates info in index.html

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
             <h3><img src="wiki-images/logo/nut.png" width="20px" height="22px">&nbsp;Why WUIC ?</h3>
             <ul>
                 <li>Modular API to be integrated in various infrastructures and to keep scalibility</li>
+                <li>Good integration with popular projects like Thymeleaf or Spring framework</li>
                 <li>On the fly solution to automate and to be configurable as much as possible</li>
                 <li>Possibility to process statics at build time if necessary</li>
                 <li>Not only processes: also takes care about where to pick and to serve statics</li>
