--- a/index.html
+++ b/index.html
@@ -89,6 +89,26 @@
 
         </section>
     </div>
+
+    <div id="carousel" class="carousel slide">
+        <ol class="carousel-indicators">
+            <li data-target="#carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel" data-slide-to="1"></li>
+            <li data-target="#carousel" data-slide-to="2"></li>
+            <li data-target="#carousel" data-slide-to="3"></li>
+        </ol>
+        <!-- Carousel items -->
+        <div class="carousel-inner">
+            <div class="active item"><img src="carousel/Diapositive1.PNG" /></div>
+            <div class="item"><img src="carousel/Diapositive2.PNG" /></div>
+            <div class="item"><img src="carousel/Diapositive3.PNG" /></div>
+            <div class="item"><img src="carousel/Diapositive4.PNG" /></div>
+        </div>
+        <!-- Carousel nav -->
+        <a class="carousel-control left" href="#carousel" data-slide="prev">&lsaquo;</a>
+        <a class="carousel-control right" href="#carousel" data-slide="next">&rsaquo;</a>
+    </div>
+
     <!-- Example row of columns -->
     <div class="row-fluid">
         <div class="span4 slideLeft">
@@ -154,6 +174,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="bootstrap/js/bootstrap-carousel.js"></script>
     <script type="text/javascript">
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
