--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <!-- Example row of columns -->
     <div class="row-fluid">
         <div class="span4 slideLeft">
-            <h3><img src="wiki-images/logo/nut.png" width="20px" height="22px">&nbsp;Features</h3>
+            <h3><img src="wiki-images/logo/nut.png" width="20px" height="22px" />&nbsp;Features</h3>
             <ul>
                 <li>HTML, CSS & JS minification/aggregation with various processors</li>
                 <li>Image merging and sprites computation for both CSS and JS languages</li>
@@ -129,7 +129,7 @@
             <p><a class="btn btn-info" href="project.html#roadmap">More features coming soon &raquo;</a></p>
         </div>
         <div class="span4 slideLeft">
-            <h3><img src="wiki-images/logo/nut.png" width="20px" height="22px">&nbsp;Why WUIC ?</h3>
+            <h3><img src="wiki-images/logo/nut.png" width="20px" height="22px" />&nbsp;Why WUIC ?</h3>
             <ul>
                 <li>Modular API to be integrated in various infrastructures and to keep scalibility</li>
                 <li>Good integration with popular projects like Thymeleaf or Spring framework</li>
@@ -144,7 +144,7 @@
             </ul>
         </div>
         <div class="span4 slideLeft">
-            <h3><img src="wiki-images/logo/nut.png" width="20px" height="22px">&nbsp;Quick start</h3>
+            <h3><img src="wiki-images/logo/nut.png" width="20px" height="22px" />&nbsp;Quick start</h3>
             <p>
                 You should start easily by taking a look at our different samples.
                 You can see a <a href="https://github.com/wuic/wuic/tree/master/samples/js-sprite-sample" target="_blank">sample</a>
