--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <ul>
                 <li>HTML, CSS & JS minification/aggregation with various processors</li>
                 <li>Image merging and sprites computation for both CSS and JS languages</li>
-                <li>JSP tag/Thymeleaf dialect for better scalibility but easy to use with pure DHTML</li>
+                <li>JSP tag/Thymeleaf dialect for better scalability but easy to use with pure DHTML</li>
                 <li>Switch debug and production mode easily</li>
                 <li>Reload configuration at runtime. Possible usage: switch debug and production mode easily</li>
                 <li>Various server-side caching solutions and smart browser cache</li>
