--- a/project.html
+++ b/project.html
@@ -87,7 +87,7 @@
     <h3 id="release">Release</h3>
 
     <p>
-        Our current release is the <a href="https://github.com/wuic/wuic/issues?labels=0.5.0&milestone=&page=1&state=closed" target="_blank">v0.5.0</a>!
+        Our current release is the <a href="https://github.com/wuic/wuic/issues?labels=0.5.1&milestone=&page=1&state=closed" target="_blank">v0.5.1</a>!
     </p>
 
     <p>See the change logs <a href="https://raw.github.com/wuic/wuic/master/changelog.txt" target="_blank">here</a>.</p>
@@ -97,7 +97,7 @@
         &lt;dependency&gt;
             &lt;groupId&gt;com.github.wuic&lt;/groupId&gt;
             &lt;artifactId&gt;wuic-{wuic-module}&lt;/artifactId&gt;
-            &lt;version&gt;0.5.0&lt;/version&gt;
+            &lt;version&gt;0.5.1&lt;/version&gt;
         &lt;/dependency&gt;
     </pre>
 
@@ -120,7 +120,7 @@
             <li>Add HTTP/2 and SPDY support</li>
             <li>Many templating support in addition to JSP/Thymeleaf: play!, JSF, etc</li>
             <li>Improve parallelism download of CSS by aggregating some of them and substitute @import with link tag</li>
-            <li>Implement the "sourcemaps" technique</li>
+            <li>Merge existing "sourcemaps" when aggreagting scripts</li>
             <li>Merge existing sprites sheets from used framework to load only one image</li>
         </ul>
     </p>
