Fixes typo and links.

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <p><a class="btn btn-info" href="project.html#roadmap">More features coming soon &raquo;</a></p>
         </div>
         <div class="span4 slideLeft">
-            <h3><img src="wiki-images/logo/nut.png" width="20px" height="22px" />&nbsp;Why WUIC ?</h3>
+            <h3><img src="wiki-images/logo/nut.png" width="20px" height="22px" />&nbsp;Why WUIC?</h3>
             <ul>
                 <li>Modular API to be integrated in various infrastructures and to keep scalibility</li>
                 <li>Good integration with popular projects like Thymeleaf or Spring framework</li>
@@ -151,7 +151,7 @@
                 showing how WUIC aggregates images, computes sprites and minifies Javascript for you!
             </p>
             <p>
-                Just move to the sample's directory and run it with :
+                Just move to the sample's directory and run it with:
                 <pre>mvn jetty:run</pre>
             </p>
             <p>
@@ -186,10 +186,10 @@
         $("#quick-link").html('<h4>Quick links</h4>'
         + '<ul>'
         + '<li style="line-height: 20px;">Find maven dependencies available <a href="http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22com.github.wuic%22" target="_blank">here</a></li>'
-        + '<li style="line-height: 20px;">Quick start with the <a href="https://github.com/wuic/wuic/tree/master/samples" target="_blank">samples</a></li>'
+        + '<li style="line-height: 20px;">Quick start with the <a href="https://github.com/wuic/wuic-samples" target="_blank">samples</a></li>'
         + '<li style="line-height: 20px;">Read the 5 minutes tutorials <a href="https://github.com/wuic/wuic/wiki/basic-js-css-processing" target="_blank">here</a></li>'
         + '<li style="line-height: 20px;">Read the <a href="https://github.com/wuic/wuic/wiki/FAQ" target="_blank">FAQ</a></li>'
-        + '<li style="line-height: 20px;">See the <a href="https://github.com/wuic/wuic/tree/master/modules" target="_blank">source code</a></li>'
+        + '<li style="line-height: 20px;">See the <a href="https://github.com/wuic/wuic/" target="_blank">source code</a></li>'
         + '<li style="line-height: 20px;">Check the <a href="https://github.com/wuic/wuic/blob/master/changelog.txt" target="_blank">changelogs</a></li>'
         + '</ul>');
         $("#more-info").html("Directly integrated in your development cycle, WUIC processes your statics on the fly. "
