--- a/project.html
+++ b/project.html
@@ -108,7 +108,7 @@
 
     <h3 id="roadmap">Roadmap</h3>
     <p>
-        WUIC is a young but we are active on the project to provide regularly new releases with a larger set of features and improvements.
+        WUIC provides regularly new releases with a larger set of features and improvements.
     </p>
 
     <p>
