Start migrating all the WIKI to the site with ASCII Doctor.

--- a/src/main/webapp/documentation.html
+++ b/src/main/webapp/documentation.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -54,6 +53,10 @@
     <h3>Wiki</h3>
     <p>
         Take a look at our <a href="https://github.com/wuic/wuic/wiki" target="_blank">wiki</a>. It refers also a lot of documentations, especially a FAQ and a starting guide.
+    </p>
+    <p>
+        <b>Note:</b> We are currently rewriting all the documentation with <a href="http://asciidoctor.org/">Asciidoctor</a>.
+        You will find the generated documentation <a href="wuic-documentation.html">here</a>.
     </p>
 
     <h3>Samples</h3>
