--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <html manifest="/pages/1432557889040/index.html.appcache" lang="en"> <head><link rel="preload" href="/pages/3824198898/000000006B8EFF0Daggregate.css" as="stylesheet" />
+<!DOCTYPE html> <html lang="en"> <head><link rel="preload" href="/pages/3824198898/000000006B8EFF0Daggregate.css" as="stylesheet" />
 <link rel="preload" href="/pages/1432557889057/000000006B8EFF0Dwiki-images/logo/favicon.ico" as="image" />
 <link rel="preload" href="/pages/1432557889059/00000000FA24617Bwiki-images/logo/logo-wuic-large.png" as="image" />
 <link rel="preload" href="/pages/1432557889001/000000008EF73820carousel/Diapositive1.PNG" as="image" />
