--- a/src/main/webapp/project.html
+++ b/src/main/webapp/project.html
@@ -116,11 +116,11 @@
         Here is a teaser of some of them:
         <ul>
             <li>Serve resources not only from servlet but also from any delegated server in charge of hosting statics</li>
-            <li>Many JS/CSS processors in addition to YUICompressor: Closure, UglifyJSS, LESS, SASS, etc</li>
+            <li>Many JS/CSS processors in addition to YUICompressor: Closure, UglifyJS, LESS, SASS, etc</li>
             <li>Add HTTP/2 and SPDY support</li>
             <li>Many templating support in addition to JSP/Thymeleaf: play!, JSF, etc</li>
             <li>Improve parallelism download of CSS by aggregating some of them and substitute @import with link tag</li>
-            <li>Merge existing "sourcemaps" when aggreagting scripts</li>
+            <li>Merge existing "sourcemaps" when aggregating scripts</li>
             <li>Merge existing sprites sheets from used framework to load only one image</li>
         </ul>
     </p>
