--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -99,10 +99,10 @@
         </ol>
         <!-- Carousel items -->
         <div class="carousel-inner">
-            <div class="active item"><img src="carousel/Diapositive1.PNG" /></div>
-            <div class="item"><img src="carousel/Diapositive2.PNG" /></div>
-            <div class="item"><img src="carousel/Diapositive3.PNG" /></div>
-            <div class="item"><img src="carousel/Diapositive4.PNG" /></div>
+            <div class="active item" style="text-align: center;height:416px;"><img style="margin:auto;" src="carousel/Diapositive1.PNG" /></div>
+            <div class="item" style="text-align: center;height:416px;"><img style="margin:auto;" src="carousel/Diapositive2.PNG" /></div>
+            <div class="item" style="text-align: center;height:416px;"><img style="margin:auto;" src="carousel/Diapositive3.PNG" /></div>
+            <div class="item" style="text-align: center;height:416px;"><img style="margin:auto;" src="carousel/Diapositive4.PNG" /></div>
         </div>
         <!-- Carousel nav -->
         <a class="carousel-control left" href="#carousel" data-slide="prev">&lsaquo;</a>
